recommended_records API
