# domain/model/user_location.go
@@ -1,11 +1,10 @@
 package model
 
-import "time"
-
-// UserPosition holds about user position snapshot
 // https://firebase.google.cn/docs/firestore/manage-data/add-data?hl=ja#custom_objects
 type UserLocation struct {
-	Latitude  float64   `firestore:"latitude,omitempty"`
-	Longitude float64   `firestore:"longitude,omitempty"`
-	Time      time.Time `firestore:"time,omitempty"`
+	Geohash   string   `firestore:"geohash,omitempty"`
+	Latitude  float64  `firestore:"latitude,omitempty"`
+	Longitude float64  `firestore:"longitude,omitempty"`
+	Name      string   `firestore:"name,omitempty"`
+	RecordIds []string `firestore:"recordIds,omitempty"`
 }
